WIP: 完成事件点记录

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -24,7 +23,6 @@
 
 # Local History for Visual Studio Code
 .history/
-
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -98,4 +96,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 *.bak
-*/events.json
+events.json
+pre_event.json
