--- a/.gitignore
+++ b/.gitignore
@@ -96,5 +96,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 *.bak
-events.json
-pre_event.json
+event.json
+pre_event*.json
